// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` should render correctly 1`] = `
<table-item-stub item="[object Object]" selectable="true" select-disabled="true" on-click="function (_) {
        return _vm.$emit(&quot;memberClick&quot;, _vm.itemData)
      }" class="owner"></table-item-stub>
`;

exports[` should render correctly with item row highlighted 1`] = `
<table-item-stub item="[object Object]" selectable="true" select-disabled="true" selected="true" on-click="function (_) {
        return _vm.$emit(&quot;memberClick&quot;, _vm.itemData)
      }" class="owner"></table-item-stub>
`;
